--- a/style.css
+++ b/style.css
@@ -513,7 +513,15 @@ h1 {
     align-items: center; 
     margin-top: 1rem;
   }
-img {
-  width: 90%;
+
+
+#showImage{
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  width: 900px;
   margin-top: 1rem;
   }
+  
+  
+  
